--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,32 +2,50 @@ name: build
 
 on:
   push:
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest ]
-        java: [ 8, 11 ]
+        java: [ 11 ]
     runs-on: ${{ matrix.os }}
     name: 'Build on ${{ matrix.os }} using Java ${{ matrix.java }}'
     steps:
       - name: 'Check out repository'
         uses: actions/checkout@v2
+
       - name: 'Set up JDK ${{ matrix.java }}'
         uses: actions/setup-java@v1
         with:
           java-version: ${{ matrix.java }}
+
+      - name: 'Cache SonarCloud packages'
+        uses: actions/cache@v1
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
       - name: 'Cache Gradle resources'
         uses: actions/cache@v2
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
+
       - name: 'Javadocs'
         run: ./gradlew javadoc
-      - name: 'Gradle build'
-        run: ./gradlew build
+
+      - name: 'Gradle build with SonarCloud analyze'
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build sonarqube --info
+
       - name: 'Shadow JAR'
         run: ./gradlew shadowJar
