--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 plugins {
     id 'net.ltgt.errorprone' apply false
+    id 'org.sonarqube' version '3.3'
+    id 'jacoco'
 }
 
 subprojects {
@@ -213,3 +215,44 @@ subprojects {
         }
     }
 }
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "Samuellucas97_tsunami-security-scanner"
+        property "sonar.organization", "samuellucas97"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
+//jacocoTestReport {
+//    dependsOn test
+//    reports {
+//        xml.required = true
+//        csv.required = false
+//        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+//    }
+//}
+//
+//jacocoTestCoverageVerification {
+//    violationRules {
+//        rule {
+//            limit {
+//                minimum = 0.5
+//            }
+//        }
+//
+//        rule {
+//            enabled = false
+//            element = 'CLASS'
+//            includes = ['org.gradle.*']
+//
+//            limit {
+//                counter = 'LINE'
+//                value = 'TOTALCOUNT'
+//                maximum = 0.3
+//            }
+//        }
+//    }
+//}
+//
+//
